--- a/src/css/terms.css
+++ b/src/css/terms.css
@@ -111,7 +111,7 @@ main p{
     height: 200px;
     /* margin-left: 100px; */
     margin: auto;
-    background: url("./backGround2 copy.png");
+    background: url("./gradient1 1.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
