--- a/src/css/privacy.css
+++ b/src/css/privacy.css
@@ -118,7 +118,7 @@ main li{
     width: 100%;
     height: 200px;
     margin: auto;
-    background: url("./backGround2 copy.png");
+    background: url("./backGroud2 copy.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
