--- a/src/css/style.css
+++ b/src/css/style.css
@@ -272,8 +272,31 @@ background-image: url('../../public//gradient1 1.png');
     font-weight: 500;
     cursor: pointer;
     border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+}
+@media (min-width: 768px) {
+    #schedule-btn {
+        padding: 10px 20px; /* Slightly increase padding */
+        font-size: 14px; /* Larger font size */
+    }
 }
 
+/* For very large screens */
+@media (min-width: 1024px) {
+    #schedule-btn {
+        padding: 12px 24px;
+        font-size: 13px;
+    }
+}
+
+/* For smaller screens (tablets & mobiles) */
+@media (max-width: 768px) {
+    #schedule-btn {
+        padding: 6px 6px; /* Reduce padding */
+        font-size: 10px; /* Smaller font size */
+        width: 45%;
+    }
+}
 #footer{
     background-color: #154a44;
     margin-top: 130px;
@@ -382,6 +405,7 @@ background-image: url('../../public//gradient1 1.png');
     position: relative;
     padding: 20px;
     border-radius: 15px;
+    margin-top: 30px;
   }
   
   #story-track {
@@ -392,7 +416,7 @@ background-image: url('../../public//gradient1 1.png');
   #stories {
     flex: 0 0 300px; /* Each testimonial card takes a fixed width */
     margin: 0 10px;
-    padding: 20px;
+  
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -412,6 +436,10 @@ background-image: url('../../public//gradient1 1.png');
     #stories {
       flex: 0 0 250px; /* Reduce the width of each testimonial card on smaller screens */
 
+    }
+    #stories img{
+        width: 100%;
+        height: 100%;
     }
    
   
