--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -192,4 +192,61 @@
         margin-right: 60px;
       }
     }
+    #schedule-sec{
+    
+    
+      width: 83%;
+      /* padding-bottom: 100px; */
+      
+  background-image: url('../../public//gradient1 1.png');
+      padding: 80px;
+      border-radius: 10px;
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-top: 380px;
+      margin-left: 3.5rem;
+  }
+  
+  #schedule-sec h2{
+      font-weight: 500;
+      margin-bottom: 15px;
+      color: #154a44;
+  }
+  
+  #schedule-bt{
+      padding: 8px 16px;
+      background-color: white;
+      border: none;
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: 500;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: all 0.3s ease-in-out;
+  }
+  @media (min-width: 768px) {
+      #schedule-bt {
+          padding: 10px 20px; /* Slightly increase padding */
+          font-size: 14px; /* Larger font size */
+      }
+  }
+  
+  /* For very large screens */
+  @media (min-width: 1024px) {
+      #schedule-bt {
+          padding: 12px 24px;
+          font-size: 13px;
+      }
+  }
+  
+ 
+  /* For smaller screens (tablets & mobiles) */
+  @media (max-width: 768px) {
+      #schedule-bt {
+          padding: 6px 6px; /* Reduce padding */
+          font-size: 10px; /* Smaller font size */
+          width: 30%;
+      }
+  
+  }
   
