--- a/src/css/privacy.css
+++ b/src/css/privacy.css
@@ -114,39 +114,37 @@ main li{
 }
 
 /* --------------------------------------------------- */
-.demo{
-    width: 100%;
-    height: 200px;
-    margin: auto;
-    background: url("./backGroud2 copy.png");
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
-    border-radius: 10px;
+#demo {
+  width: 80%;
+  height: 200px;
+  
+  background: url("./Home-BackGround.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  border-radius: 10px;
 }
-.demo h1{
-    position: absolute;
-    top: 30%;
-    left: 10%;
-    font-size: 25px;
+#demo h1 {
+  position: absolute;
+  top: 30%;
+  left: 10%;
+  font-size: 25px;
 }
-.demo button{
-    position: absolute;
-    top: 70%;
-    left: 10%;
+#demo button {
+  position: absolute;
+  top: 70%;
+  left: 10%;
 }
 @media (max-width: 740px) {
-    .demo{
-        margin: auto;
-        width: 76vw;
-
-    }
-    .demo h1{
-        font-size: 20px;
-    }
-}
-/* ---------------------------------------------------- */
+  #demo {
+    margin: 20px;
+    width: 80vw;
+  }
+  #demo h1 {
+    font-size: 20px;
+  }
+}/* ---------------------------------------------------- */
 
 .footer {
   /* border:2px solid white; */
