--- a/src/css/home.css
+++ b/src/css/home.css
@@ -12,7 +12,7 @@
     background-position: center;
     background-repeat: no-repeat;
   
-    width: 100%;
+    width: 100vw;
     min-height: 100vh;
   }
   .navbar {
@@ -757,10 +757,10 @@
   }
   /* --------------------------------------------------------------------------------- */
   #demo {
-    width: 80%;
+    width: 100%;
     height: 200px;
-    margin-left: 100px;
-    background: url("./BackGround2.png");
+    
+    background: url("./Home-BackGround.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
