--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -54,7 +54,7 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      max-width: 1000px;
+      max-width: 100vw;
       margin: 0 auto;
       flex-wrap: wrap;
     }
@@ -192,7 +192,7 @@
         margin-right: 60px;
       }
     }
-    #schedule-sec{
+    #schedule-section{
     
     
       width: 83%;
@@ -204,16 +204,16 @@
       background-repeat: no-repeat;
       background-size: cover;
       margin-top: 380px;
-      margin-left: 3.5rem;
+      margin-left: 1.5rem;
   }
   
-  #schedule-sec h2{
+  #schedule-section h2{
       font-weight: 500;
       margin-bottom: 15px;
       color: #154a44;
   }
   
-  #schedule-bt{
+  #schedule-btn{
       padding: 8px 16px;
       background-color: white;
       border: none;
@@ -225,7 +225,7 @@
       transition: all 0.3s ease-in-out;
   }
   @media (min-width: 768px) {
-      #schedule-bt {
+      #schedule-btn {
           padding: 10px 20px; /* Slightly increase padding */
           font-size: 14px; /* Larger font size */
       }
@@ -233,7 +233,7 @@
   
   /* For very large screens */
   @media (min-width: 1024px) {
-      #schedule-bt {
+      #schedule-btn {
           padding: 12px 24px;
           font-size: 13px;
       }
@@ -242,7 +242,7 @@
  
   /* For smaller screens (tablets & mobiles) */
   @media (max-width: 768px) {
-      #schedule-bt {
+      #schedule-btn {
           padding: 6px 6px; /* Reduce padding */
           font-size: 10px; /* Smaller font size */
           width: 30%;
