--- a/src/css/read.css
+++ b/src/css/read.css
@@ -235,7 +235,8 @@ h1 {
 
 .header-container {
     display: flex;
-    justify-content: space-between;
+    gap:1040px;
+    margin-left: 50px;
     align-items: center;
     margin-bottom: 1rem;
 }
