--- a/src/css/home.css
+++ b/src/css/home.css
@@ -755,6 +755,16 @@
       transform: translateX(-11px);
     }
   }
+  .no-scrollbar::-webkit-scrollbar {
+        display: none;
+      }
+  
+      /* Hide scrollbar for IE, Edge, and Firefox */
+      .no-scrollbar {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;     /* Firefox */
+      } 
+    
   /* --------------------------------------------------------------------------------- */
   #demo {
     width: 100%;
